// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Should have content in footer slot 1`] = `
<div>
  <div class="container"></div>
  <div>Footer slot</div>
</div>
`;

exports[`Page Should have content in header slot 1`] = `
<div>
  <div>Header slot</div>
  <div class="container"></div>
</div>
`;
